@@ -18,13 +18,13 @@ package org.apache.kafka.common.test;
 
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.TopicDescription;
+import org.apache.kafka.common.Endpoint;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.errors.TimeoutException;
 import org.apache.kafka.common.network.ListenerName;
 import org.apache.kafka.common.utils.Exit;
 import org.apache.kafka.common.utils.Utils;
-import org.apache.kafka.network.EndPoint;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -32,7 +32,7 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.Random;
 import java.util.function.BiFunction;
@@ -106,10 +106,10 @@ public class TestUtils {
     /**
      * Convert EndPoint to String
      */
-    public static String endpointToString(EndPoint endPoint) {
+    public static String endpointToString(Endpoint endPoint) {
         String host = endPoint.host();
         int port = endPoint.port();
-        ListenerName listenerName = endPoint.listenerName();
+        ListenerName listenerName = ListenerName.normalised(endPoint.listener());
 
         String hostport = (host == null) ? (":" + port) : Utils.formatAddress(host, port);
         return listenerName.value() + "://" + hostport;
@@ -180,7 +180,7 @@ public class TestUtils {
     }
 
     private static Integer getLeaderFromAdmin(Admin admin, String topic, int partition) throws Exception {
-        TopicDescription topicDescription = admin.describeTopics(Collections.singletonList(topic)).allTopicNames().get().get(topic);
+        TopicDescription topicDescription = admin.describeTopics(List.of(topic)).allTopicNames().get().get(topic);
         return topicDescription.partitions().stream()
             .filter(partitionInfo -> partitionInfo.partition() == partition)
             .findFirst()
